--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
@@ -19,6 +21,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.9.5"
   }
 }
