--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "chart.js": "^3.8.0",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "date-fns": "^2.28.0",
     "postcss": "^8.4.14",
     "vue": "^3.2.33",
+    "vue-chartjs": "^4.1.0",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
