--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueform/toggle": "^2.0.2",
     "autoprefixer": "^10.4.7",
     "chart.js": "^3.8.0",
     "chartjs-adapter-date-fns": "^2.0.0",
