--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.28.0",
     "postcss": "^8.4.14",
     "vue": "^3.2.33",
+    "vue-accessible-color-picker": "^4.0.3",
     "vue-chartjs": "^4.1.0",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
