--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^3.8.0",
     "chartjs-adapter-date-fns": "^2.0.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "postcss": "^8.4.14",
     "vue": "^3.2.33",
     "vue-accessible-color-picker": "^4.0.3",
@@ -27,7 +28,6 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.24",
-    "vite": "^2.9.5"
+    "tailwindcss": "^3.0.24"
   }
 }
